# maki

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  justfile
.github/workflows/: release.yml
maki-agent/: Cargo.toml
maki-agent/src/: agent.rs  client.rs  command.rs  lib.rs  pricing.rs  skill.rs  tool.rs  types.rs
maki-code-index/: Cargo.toml
maki-code-index/src/: common.rs  go.rs  java.rs  lib.rs  python.rs  rust.rs  typescript.rs
maki-config/: Cargo.toml
maki-config-macro/src/: lib.rs
maki-config/src/: lib.rs
maki-docgen/src/: gen_providers.rs
maki-interpreter/src/: runner.rs
maki-lua/: Cargo.toml
maki-lua/src/: error.rs  lib.rs  loader.rs  runtime.rs
maki-lua/tests/: index_equivalence.rs  plugin_host.rs  treesitter_compat.rs
maki-providers/: Cargo.toml
maki-providers/src/: error.rs  lib.rs  model.rs  provider.rs  tier_map.rs  types.rs
maki-storage/: Cargo.toml
maki-storage/src/: auth.rs  lib.rs  log.rs  model.rs  paths.rs  plans.rs  sessions.rs  theme.rs
maki-tool-macro/src/: lib.rs
maki-ui/: Cargo.toml
maki-ui/src/: animation.rs  app.rs  chat.rs  clipboard.rs  event_loop.rs  image.rs  lib.rs  markdown.rs  mock.rs  render_worker.rs  selection.rs  splash.rs  storage_writer.rs  terminal.rs  text_buffer.rs  theme.rs
plugins/bash/: init.lua
plugins/index/: init.lua
plugins/lib/: tool_view.lua
plugins/webfetch/: init.lua
plugins/websearch/: init.lua
scripts/: ac.py  compare.py  tool_token_analysis.py
site/: demo.cast  index.html
src/: cli.rs  main.rs  print.rs  setup.rs  update.rs
src/cmd/: mod.rs  (+2 more)
(+113 files in other folders)
