[package]
name = "maki-storage"
version.workspace = true
edition.workspace = true

[dependencies]
getrandom = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
